# sss

./: .gitignore  SIGNED_URLS.md  readme.md
.github/: copilot-instructions.md
examples/crm/: spec.md
examples/crm/node/: .gitignore  Dockerfile  IMPLEMENTATION.md  README.md  asyncapi.yaml  docker-compose.yml  drizzle.config.ts  examples.sh  openapi.yaml  package-lock.json  package.json  service.yaml  tsconfig.json  tsconfig.worker.json  wrangler.toml
examples/order/: spec.md
examples/order/dotnet/: .env.example  .gitignore  Dockerfile  GenerateToken.cs  IMPLEMENTATION.md  OrdersService.csproj  PROJECT_SUMMARY.md  Program.cs  README.md  asyncapi.yaml  docker-compose.yml  examples.sh  openapi.yaml  test-service.sh
examples/order/node-hono/: .gitignore  Dockerfile  IMPLEMENTATION.md  PROJECT_SUMMARY.md  README.md  asyncapi.yaml  docker-compose.yml  drizzle.config.ts  examples.sh  openapi.yaml  package-lock.json  package.json  (+3 more)
examples/order/rust/: Cargo.toml  Dockerfile  IMPLEMENTATION.md  README.md  SUMMARY.md  asyncapi.yaml  docker-compose.yml  examples.sh  generate-test-token.rs  openapi.yaml  service.yaml
examples/order/rust/src/: config.rs  events.rs  health.rs  main.rs  telemetry.rs
examples/order/rust/src/auth/: mod.rs  scopes.rs
examples/order/rust/src/common/: errors.rs
examples/order/rust/src/orders/: dto.rs  entities.rs  mod.rs  service.rs
examples/podcast/: package-lock.json  spec.md
stacks/: dotnet.md  elixer.md  go.md  java.md  node.md  python.md  rust.md
stacks/node/: R2_PRESIGNED_URLS.md  index.md  node-fastify.md  node-nestjs.md
(+152 files in other folders)
