[package]
name = "orders-service"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
jsonwebtoken = "9.0"
utoipa = { version = "4.0", features = ["axum_extras", "chrono", "uuid"] }
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.22", features = ["rt-tokio"] }
tracing-opentelemetry = "0.24"
validator = { version = "0.18", features = ["derive"] }
async-trait = "0.1"
once_cell = "1.19"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
